remove my html from doctor#show

--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -35,212 +35,7 @@
 <table class="Completed">
 </table>
 
-<%#= link_to 'Calendar', doctors_path %>
-
-
-
-<head>
-  <!-- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/> -->
-  <title></title>
-
-  <!-- CSS  -->
-  <!-- <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
-  <!-- <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> -->
-</head>
-<body>
-<!--   <nav class="red accent-3" role="navigation">
-    <div class="container">
-      <div class="nav-wrapper"><a id="logo-container" href="#" class="brand-logo">
-      IN-LOOP</a>
-        <ul class="right">
-          <li><a href="#">View</a></li>
-          <li><a href="#">Calendar</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-
-        <ul id="nav-mobile" class="side-nav">
-          <li><a href="#">View</a></li>
-          <li><a href="#">Calendar</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-        <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
-      </div>
-    </div>
-  </nav>
- -->
-
-<!--   <div class="container">
-    <div class="row">
-      <div class="col s8">
-        <table class="hoverable checkedIn">
-          <h5 class="header center red-text">Current Waiting List</h5>
-          <thead>
-            <tr>
-                <th data-field="id">Input</th>
-                <th data-field="name">Input</th>
-                <th data-field="price">Input</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col s4">
-        <table class="hoverable Completed">
-          <h5 class="header left red-text">Seen Today</h5>
-          <thead>
-            <tr>
-                <th data-field="id">Input</th>
-                <th data-field="name">Input</th>
-                <th data-field="price">Input</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col s8">
-        <table class="hoverable enRoute">
-          <h5 class="header center red-text">Currently Arriving List with ETA</h5>
-          <thead>
-            <tr>
-                <th data-field="id">Input</th>
-                <th data-field="name">Input</th>
-                <th data-field="price">Input</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="col s4">
-        <table class="hoverable laterAppt">
-          <h5 class="header left red-text">Upcoming Appointments</h5>
-          <thead>
-            <tr>
-              <th data-field="id">Input</th>
-              <th data-field="name">Input</th>
-              <th data-field="price">Input</th>
-            </tr>
-          </thead>
-
-          <tbody>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-            <tr>
-              <td>Input</td>
-              <td>Input</td>
-              <td>Input</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </div>
-  </div>
- --><!--   <footer class="page-footer red">
-    <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Irreverent Honey Badgers Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Qasim</a></li>
-            <li><a class="white-text" href="#!">Katie</a></li>
-            <li><a class="white-text" href="#!">Jackson</a></li>
-            <li><a class="white-text" href="#!">Noel</a></li>
-            <li><a class="white-text" href="#!">Anya</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="red-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
- -->
-
-  <!--  Scripts-->
-  <!-- <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script> -->
-  <!-- <script src="js/materialize.js"></script> -->
-  <!-- <script src="js/init.js"></script> -->
-</body>
-
+<%= link_to 'Calendar', doctors_path %>
 
 <script>
   $(function(){
@@ -306,7 +101,7 @@
   });
 </script>
 
-<!-- <script>
+<script>
   $(function(){
     var m = function(){
       $.get('/doctors/' + '<%= current_doctor.id %>' + '/get_patient').done(function(data){
@@ -349,4 +144,4 @@
     setInterval(m,2500);
   });
 </script>
- -->
+
