added bgimage for landing

--- a/forlanding.html.erb
+++ b/forlanding.html.erb
@@ -11,7 +11,10 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center red-text">WELCOME TO IN-LOOP</h1>
+      <!-- <h1 class="header center red-text">WELCOME TO IN-LOOP</h1> -->
+      <div class="row center">
+        <img class="responsive-img bgimage" src="landingImage.png">
+      </div>
       <div class="row center">
         <h5 class="header col s12 light">Let your doctor know you're on your way</h5>
       </div>
@@ -70,7 +73,7 @@
     </div>
   </div>
 
-  <footer class="page-footer red">
+<!--   <footer class="page-footer red">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -106,7 +109,7 @@
       </div>
     </div>
   </footer>
-
+ -->
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
