--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -50,8 +50,9 @@ body, nav, div, span, article, p, ul, li, a {
 }
 
 .application  {
-  background-image: url("http://i1.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-7.00.34-PM.png");
-  background-size: cover;
+  // background-image: url("http://i1.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-7.00.34-PM.png");
+  // background-size: cover;
+  background: radial-gradient(#bbdefb , #2196f3 , #0d47a1 );
 }
 
 body {
