push up for Jack

--- a/app/assets/stylesheets/doctors.css.scss
+++ b/app/assets/stylesheets/doctors.css.scss
@@ -3,6 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 body {
+  background: radial-gradient(#fafafa, #bdbdbd, #616161); // doctor show page
   font-size: 62.5%;
 }
 label, input {
