--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,213 +16,217 @@
  *= require_self
  */
 
-
-
-$first: #616161;
-$second: #00336a;
-$third: #00C4FA;
-$fourth: #F5F5F5;
-$fifth: silver;
-$sixth: #12C700;
-body, nav, div, span, article, p, ul, li, a {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none; }
-
-.header {
-  width: 100%;
-  height: 2rem;
-  background-color: $second;
-  position: fixed;
-  top: 0px;
-
-  #logo{
-    font-size: 36px;
-    padding-left: 10px;
-    color: white;
-  }
-}
-
-.appointment {
-  border: 1px solid #D30006;
-}
-
-.application  {
-  background-image: url("http://i1.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-7.00.34-PM.png");
-  background-size: cover;
-}
-
 body {
-  background-image: url("http://i2.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-4.40.19-PM.png");
-  background-size: cover;
+  // background: radial-gradient(#bbdefb, #2196f3, #0d47a1); // landing page
+  font-size: 62.5%;
 }
 
-#p_travel {
-  color: white;
-  text-align: center;
-  font-size: 2rem;
 
-}
+// $first: #616161;
+// $second: #00336a;
+// $third: #00C4FA;
+// $fourth: #F5F5F5;
+// $fifth: silver;
+// $sixth: #12C700;
+// body, nav, div, span, article, p, ul, li, a {
+//     margin: 0;
+//     border: 0;
+//     padding: 0;
+//     font-family: 'Roboto', sans-serif;
+//     text-decoration: none; }
 
-.navbar-text, .navbar-link{
-  color: white;
-  text-align: right;
-  padding-right:0.5rem;
-  // position: absolute;
-  // left: 100px;
-  // top: 150px;
-}
+// .header {
+//   width: 100%;
+//   height: 2rem;
+//   background-color: $second;
+//   position: fixed;
+//   top: 0px;
 
-.patient_button {
-  position: fixed;
-  top: 37rem;
-  left: 15rem;
-  -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  background-color:#eceeec ;
-  -moz-border-radius:4px;
-  -webkit-border-radius:4px;
-  border-radius:4px;
-  border:1px solid #ffffff ;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff ;
-  font-family:arial;
-  font-size: 5rem;
-  padding:7px 20px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #b23e35 ;
-}
+//   #logo{
+//     font-size: 36px;
+//     padding-left: 10px;
+//     color: white;
+//   }
+// }
 
-.doctor_button {
-  position: fixed;
-  top: 37rem;
-  right: 15rem;
-  -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  box-shadow:inset 0px 39px 0px -24px #eceeec ;
-  background-color:#eceeec ;
-  -moz-border-radius:4px;
-  -webkit-border-radius:4px;
-  border-radius:4px;
-  border:1px solid #ffffff ;
-  display:inline-block;
-  cursor:pointer;
-  color:#ffffff ;
-  font-family:arial;
-  font-size:15px;
-  padding:7px 20px;
-  text-decoration:none;
-  text-shadow:0px 1px 0px #b23e35 ;
-}
+// .appointment {
+//   border: 1px solid #D30006;
+// }
 
-#travel{
-  text-align:center;
-  margin: 0 auto;
-}
+// .application  {
+//   background-image: url("http://i1.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-7.00.34-PM.png");
+//   background-size: cover;
+// }
 
-#buttonDiv{
-  margin: 2rem;
-  width: 20rem;
-  font-size: 1rem;
-  height: 2rem;
-}
+// body {
+//   background-image: url("http://i2.wp.com/www.qasimnaqvi.me/wp-content/uploads/2015/03/Screen-Shot-2015-03-24-at-4.40.19-PM.png");
+//   background-size: cover;
+// }
 
-#tracking{
-  margin: 0 auto;
-  font-size: 1rem;
-}
+// #p_travel {
+//   color: white;
+//   text-align: center;
+//   font-size: 2rem;
 
-#send_message{
-  margin: 0 auto;
-  font-size: 1rem;
-}
+// }
 
-@media only screen and (max-width : 480px) {
-  body, nav, div, span, article, p, ul, li, a {
-    margin: 0;
-    border: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    text-decoration: none; }
+// .navbar-text, .navbar-link{
+//   color: white;
+//   text-align: right;
+//   padding-right:0.5rem;
+//   // position: absolute;
+//   // left: 100px;
+//   // top: 150px;
+// }
 
-  body {
-    background-color: $first;
-    width: 100%;
-  }
-  .header {
-    width: 100%;
-    height: 52px;
-    background-color: $second;
-    position: fixed;
-    top: 0px;
+// .patient_button {
+//   position: fixed;
+//   top: 37rem;
+//   left: 15rem;
+//   -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   background-color:#eceeec ;
+//   -moz-border-radius:4px;
+//   -webkit-border-radius:4px;
+//   border-radius:4px;
+//   border:1px solid #ffffff ;
+//   display:inline-block;
+//   cursor:pointer;
+//   color:#ffffff ;
+//   font-family:arial;
+//   font-size: 5rem;
+//   padding:7px 20px;
+//   text-decoration:none;
+//   text-shadow:0px 1px 0px #b23e35 ;
+// }
 
-    #logo{
-      font-size: 36px;
-      padding-left: 10px;
-    }
-  }
-  .navbar-text {
-    margin-top: 58px;
-    color: $fourth;
-    margin-bottom: 5px;
-    text-align: center;
-  }
-  #edit:active {
-    color: $fourth;
-  }
-  #edit:hover {
-    color: $fifth;
-  }
-  #edit:visited {
-    color: $fourth;
-  }
-  #logout:active {
-    color: $fourth;
-  }
-  #logout:hover {
-    color: $fifth;
-  }
-  #logout:visited {
-    color: $fourth;
-  }
-  #calendar {
-    width: 85%;
-    margin: 0 auto;
-    background-color: silver;
-  }
+// .doctor_button {
+//   position: fixed;
+//   top: 37rem;
+//   right: 15rem;
+//   -moz-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   -webkit-box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   box-shadow:inset 0px 39px 0px -24px #eceeec ;
+//   background-color:#eceeec ;
+//   -moz-border-radius:4px;
+//   -webkit-border-radius:4px;
+//   border-radius:4px;
+//   border:1px solid #ffffff ;
+//   display:inline-block;
+//   cursor:pointer;
+//   color:#ffffff ;
+//   font-family:arial;
+//   font-size:15px;
+//   padding:7px 20px;
+//   text-decoration:none;
+//   text-shadow:0px 1px 0px #b23e35 ;
+// }
 
-  #travel {
-    width: 100%;
-    color: $fourth;
-  }
+// #travel{
+//   text-align:center;
+//   margin: 0 auto;
+// }
 
-  #ouputDiv {
-    font-family: 'Roboto', sans-serif;
-  }
+// #buttonDiv{
+//   margin: 2rem;
+//   width: 20rem;
+//   font-size: 1rem;
+//   height: 2rem;
+// }
 
-  #travel > * {
-    margin: 0 auto;
-    display: block;
-    width: 65%;
-    text-align: center;
-   }
+// #tracking{
+//   margin: 0 auto;
+//   font-size: 1rem;
+// }
 
-  form.button_to input[type="submit"]{
-    background-color: white;
-    text-align: center;
-    color: $third;
-    width: 100%;
-    margin: 0 auto;
-    font-size: 1.5;
-    display: block;
-    border-radius: 5px;
+// #send_message{
+//   margin: 0 auto;
+//   font-size: 1rem;
+// }
 
-      &:active {
-        background-color: $sixth;
-      }
-  }
-}
+// @media only screen and (max-width : 480px) {
+//   body, nav, div, span, article, p, ul, li, a {
+//     margin: 0;
+//     border: 0;
+//     padding: 0;
+//     font-family: 'Roboto', sans-serif;
+//     text-decoration: none; }
+
+//   body {
+//     background-color: $first;
+//     width: 100%;
+//   }
+//   .header {
+//     width: 100%;
+//     height: 52px;
+//     background-color: $second;
+//     position: fixed;
+//     top: 0px;
+
+//     #logo{
+//       font-size: 36px;
+//       padding-left: 10px;
+//     }
+//   }
+//   .navbar-text {
+//     margin-top: 58px;
+//     color: $fourth;
+//     margin-bottom: 5px;
+//     text-align: center;
+//   }
+//   #edit:active {
+//     color: $fourth;
+//   }
+//   #edit:hover {
+//     color: $fifth;
+//   }
+//   #edit:visited {
+//     color: $fourth;
+//   }
+//   #logout:active {
+//     color: $fourth;
+//   }
+//   #logout:hover {
+//     color: $fifth;
+//   }
+//   #logout:visited {
+//     color: $fourth;
+//   }
+//   #calendar {
+//     width: 85%;
+//     margin: 0 auto;
+//     background-color: silver;
+//   }
+
+//   #travel {
+//     width: 100%;
+//     color: $fourth;
+//   }
+
+//   #ouputDiv {
+//     font-family: 'Roboto', sans-serif;
+//   }
+
+//   #travel > * {
+//     margin: 0 auto;
+//     display: block;
+//     width: 65%;
+//     text-align: center;
+//    }
+
+//   form.button_to input[type="submit"]{
+//     background-color: white;
+//     text-align: center;
+//     color: $third;
+//     width: 100%;
+//     margin: 0 auto;
+//     font-size: 1.5;
+//     display: block;
+//     border-radius: 5px;
+
+//       &:active {
+//         background-color: $sixth;
+//       }
+//   }
+// }
