--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,11 +1,30 @@
-<h1> Waiting Roomm </h1>
-
 <% if notice %>
 <p class="alert alert-success"><%= notice %></p>
 <% end %>
 <% if alert %>
 <p class="alert alert-danger"><%= alert %></p>
 <% end %>
+
+  <div class="navbar-fixed">
+    <nav class="blue darken-3" role="navigation">
+      <div class="container">
+        <div class="nav-wrapper"><a id="logo-container" href="#!" class="brand-logo"><%= image_tag("in loop logo.png") %></a>
+          <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="#">View</a></li>
+            <li><%= link_to 'Calendar', doctors_path %></li>
+            <li><%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %></li>
+          </ul>
+
+          <ul id="nav-mobile" class="side-nav">
+            <li><a href="#">View</a></li>
+            <li><%= link_to 'Calendar', doctors_path %></li>
+            <li><%= link_to "logout", destroy_doctor_session_path, method: :delete, :class => 'navbar-link', id: "logout" %></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </div>
 
 
 <p class="navbar-text pull-right">
@@ -35,7 +54,171 @@
 <table class="Completed">
 </table>
 
-<%= link_to 'Calendar', doctors_path %>
+
+  <div class="container">
+    <div class="row">
+      <div class="col s8">
+        <table class="hoverable checkedIn">
+          <h5 class="header center red-text">Current Waiting List</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col s4">
+        <table class="hoverable Completed">
+          <h5 class="header left red-text">Seen Today</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col s8">
+        <table class="hoverable enRoute">
+          <h5 class="header center red-text">Currently Arriving List with ETA</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="col s4">
+        <table class="hoverable laterAppt">
+          <h5 class="header left red-text">Upcoming Appointments</h5>
+          <thead>
+            <tr>
+                <th data-field="id">Input</th>
+                <th data-field="name">Input</th>
+                <th data-field="price">Input</th>
+            </tr>
+          </thead>
+
+          <tbody>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+            <tr>
+              <td>Input</td>
+              <td>Input</td>
+              <td>Input</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+  <footer class="page-footer red">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Irreverent Honey Badgers Bio</h5>
+          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Qasim</a></li>
+            <li><a class="white-text" href="#!">Katie</a></li>
+            <li><a class="white-text" href="#!">Jackson</a></li>
+            <li><a class="white-text" href="#!">Noel</a></li>
+            <li><a class="white-text" href="#!">Anya</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="red-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
 
 <script>
   $(function(){
