--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,12 @@
   <%= csrf_meta_tags %>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.0/handlebars.min.js"></script>
   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
-  <!-- <link href='fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
+  <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 
-<body class="<%= controller_name %> <%= action_name %>" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>"
-
+<body class="<%= controller_name %> <%= action_name %> " data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>">
 <main>
-  <div class="header">
-    <header id="logo">IN LOOP</header>
-  </div>
 <%= yield %>
 </main>
 
