--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@ body {
   font-size: 62.5%;
 }
 
+#download-button {
+  font-size: 1rem;
+}
+
 
 // $first: #616161;
 // $second: #00336a;
@@ -63,12 +67,6 @@ body {
 //   background-size: cover;
 // }
 
-// #p_travel {
-//   color: white;
-//   text-align: center;
-//   font-size: 2rem;
-
-// }
 
 // .navbar-text, .navbar-link{
 //   color: white;
