--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -1,3 +1,27 @@
 // Place all the styles related to the Patients controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#p_travel {
+  text-align: center;
+  font-size: 2rem;
+}
+
+#buttonDiv{
+  margin: 2rem;
+  width: 20rem;
+  font-size: 1rem;
+  height: 2rem;
+}
+
+#tracking{
+  margin: 0 auto;
+  font-size: 1rem;
+}
+
+#send_message{
+  margin: 0 auto;
+  font-size: 1rem;
+}
+
+
