--- a/app/assets/stylesheets/doctors.css.scss
+++ b/app/assets/stylesheets/doctors.css.scss
@@ -33,3 +33,7 @@ div#users-contain table td, div#users-contain table th {
 .validateTips {
   border: 1px solid transparent; padding: 0.3em;
 }
+
+#calendar{
+  font-size: 12px;
+}
