--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,2 +1,6 @@
-<%= button_to " I'm a Patient ", p_omniauth_patients_path, method: :get, form_class: "patient_button"%>
-<%= button_to " I'm a Provider ", d_omniauth_doctors_path, method: :get, form_class: "doctor_button" %>
+<div class="row left">
+  <%= link_to " I'm a Patient ", p_omniauth_patients_path, method: :get, id: "download-button", class: "btn-large waves-effect waves-light red" %>
+</div>
+<div class="row right">
+<%= link_to " I'm a Provider ", d_omniauth_doctors_path, method: :get, id: "download-button", class: "btn-large waves-effect waves-light red" %>
+</div>
