--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,29 @@
   <!-- <link href='fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'> -->
 </head>
 
-<body class="<%= controller_name %> <%= action_name %>" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>"
+<body class="responsive-img" "<%= controller_name %> <%= action_name %>" src="inLoopBG.png" data-current-patient="<%= current_patient.try(:id) %>" data-current-patient-email="<%= current_patient.try(:email) %>" data-current-doctor=" <%= current_doctor.try(:id) %>" data-current-doctor-email="<%= current_doctor.try(:email)%>"
 
 <main>
-  <div class="header">
+  <!-- <div class="header">
     <header id="logo">IN LOOP</header>
-  </div>
+  </div> -->
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <!-- <h1 class="header center red-text">WELCOME TO IN-LOOP</h1> -->
+      <div class="row center">
+        <img class="responsive-img bgimage" src= <%=image_url "landingImage.png" %>
+      </div>
+      <div class="row center">
+        <h5 class="header col s12 light">Let your doctor know you're on your way</h5>
+      </div>
+      <div class="row center">
+        <a href="" id="download-button" class="btn-large waves-effect waves-light red">How it works</a>
+      </div>
+      <br><br>
 <%= yield %>
+    </div>
+  </div>
 </main>
 
 </body>
