--- a/app/assets/stylesheets/patients.css.scss
+++ b/app/assets/stylesheets/patients.css.scss
@@ -2,6 +2,13 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.entry {
+  font-size: 14px;
+}
+#outputDiv {
+  font-size: 14px;
+}
+
 #p_travel {
   text-align: center;
   font-size: 2rem;
