--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -143,42 +143,23 @@
     </div>
   </div>
  -->
-  <footer class="page-footer blue darken-3">
+<br><br>
+<footer class="page-footer blue darken-3">
+  <div class="container">
+    <div class="row">
+      <div class="col l12 s12">
+        <h5 class="white-text">In-Loop Bio</h5>
+        <p class="grey-text text-lighten-4">An appointment based application for healthcare providers that allows them to anticipate the estimated time of arrival of individual patients with same day appointments. It allows patients to display their ETA prior to their appointment , hence confirming their visit, which allows healthcare providers to improve patient experience and operational efficiency with better clinical workflow and help reduce check-in time and waiting time drastically.</p>
+      </div>
+    </div>
+  </div>
+  <div class="footer-copyright">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
-          <h5 class="white-text">Irreverent Honey Badgers Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Qasim</a></li>
-            <li><a class="white-text" href="#!">Katie</a></li>
-            <li><a class="white-text" href="#!">Jackson</a></li>
-            <li><a class="white-text" href="#!">Noel</a></li>
-            <li><a class="white-text" href="#!">Anya</a></li>
-          </ul>
-        </div>
-      </div>
+    Made by <a class="white-text text-lighten-3" href="http://materializecss.com">Materialize</a>
     </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="white-text text-lighten-3" href="http://materializecss.com">Materialize</a>
-      </div>
-    </div>
-  </footer>
+  </div>
+</footer>
+
 
 
 <script>
